syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto.user";
option java_outer_classname = "UserProto";

import "property_type.proto";

service UserService {
    rpc CreateClient (CreateClientMessage) returns (EmptyMessage) {}
}

message CreateClientMessage {
    int64 id = 1;
    string first_name = 2;
    string surname = 3;
    string email = 4;
    bool is_landlord = 5;
}
